--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,28 @@
-*target*
-*.jar
-*.war
-*.ear
-*.class
+ *target*
+ *.jar
+ *.war
+ *.ear
+ *.class
 
-# eclipse specific git ignore
-*.pydevproject
-.project
-.metadata
-bin/**
-tmp/**
-tmp/**/*
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.classpath
-.settings/
-.loadpath
+ # eclipse specific git ignore
+ *.pydevproject
+ .project
+ .metadata
+ bin/**
+ tmp/**
+ tmp/**/*
+ *.tmp
+ *.bak
+ *.swp
+ *~.nib
+ local.properties
+ .classpath
+ .settings/
+ .loadpath
 
 # External tool builders
-.externalToolBuilders/
+ .externalToolBuilders/
 
-# Locally stored "Eclipse launch configurations"
-*.launch
+# # Locally stored "Eclipse launch configurations"
+ *.launch
+/target/
